Ajout déclarations CSS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                         </li>
                         <li class="produits">
                             <h2 class="produits__title">
-                                <a href="#">Nos produits</a>
+                                <a href="#">
+                                    <span>
+                                       Nos produits 
+                                    </span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
+                                </a>
                             </h2>
                             <ul class="produits__content">
                                 <li>
@@ -49,10 +54,15 @@
                             </ul>
                         </li>
                         <li class="services">
-                            <h2 class="service__title">
-                                <a href="#">Nos services</a>
+                            <h2 class="services__title">
+                                <a href="#">
+                                    <span>
+                                       Nos services 
+                                    </span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
+                                </a>
                             </h2>
-                            <ul class="service__content">
+                            <ul class="services__content">
                                 <li>
                                     <a href="#">création de site web</a>
                                 </li>
@@ -67,8 +77,23 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="Portfolio">
-                            <a href="#">Portfolio</a>
+                        <li class="apropos">
+                            <h2 class="apropos__title">
+                                <a href="#">
+                                    <span>
+                                       À Propos 
+                                    </span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
+                                </a>
+                            </h2>
+                            <ul class="apropos__content">
+                                <li>
+                                    <a href="#">Contact</a>
+                                </li>
+                                <li>
+                                    <a href="#">Portfolio</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <div class="btn">
@@ -111,36 +136,33 @@
         </header>
         <main class="main"></main>
         <footer class="footer">
-            <li class="apropos">
-                <h2 class="apropos__title">
-                    <a href="#">À Propos</a>
-                </h2>
-                <ul class="apropos__content">
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#">Portfolio</a>
-                    </li>
-                </ul>
-            </li>
             <ul class="footer__contact">
                 <li>
                     <h2>Contactez-nous</h2>
-                    <div>
-                        <p>Tel : <span>+243816213580</span><span>+243816213580</span></p>
+                    <div class="tel">
+                        <p>Tel : +243816213580<br />   +243816213580</p>
                     </div>
-                    <div>
+                    <div class="email">
                         <p>
-                            <a href="#">ardev@gmail.com</a>
+                            <a href="#">ardev-digital@gmail.com</a>
                             <a href="#">aaronbukasa.mba@gmail.com</a>
                         </p>
                     </div>
                 </li>
-                <li>Suivez-nous</li>
+                <li>
+                    <h2>
+                        Suivez-nous
+                    </h2>
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagramme</a>
+                    <a href="#">Twitter</a>
+                </li>
             </ul>
             <div class="footer__portfolio">
-                <a href="#">Portfolio</a>
+                <h2>
+                    <a href="#">Portfolio</a>
+                </h2>
+                
             </div>
             <div class="footer__copyright">
                 copyright @ardev 2023
