--- a/index.html
+++ b/index.html
@@ -1,173 +1,65 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Aaron Bukasa">
-    <title>Ardev digital</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer ></script>
+    <title>AARON DEV</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./app.js" defer></script>
 </head>
 <body>
     <div id="container">
         <header class="header">
-            <nav class="header__navbar">
-                <div class="header__navbar__logo">
-                    <img src="#" alt="Ardev digital">
+            <nav class="header__nav">
+                <div class="header__nav__logo">
+                    <a href="#">Aaron dev</a>
                 </div>
-                <div class="header__navbar__links">
-                    <ul class="link">
-                        <li class="cmdSite">
-                            <a href="#">Commender votre site</a>
-                        </li>
-                        <li class="cmdLogiciel">
-                            <a href="#">Obtenez le logiciel de gestion</a>
-                        </li>
-                        <li class="produits">
-                            <h2 class="produits__title">
-                                <a href="#">
-                                    <span>
-                                       Nos produits 
-                                    </span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
-                                </a>
-                            </h2>
-                            <ul class="produits__content">
-                                <li>
-                                    <a href="#">Logiciel de gestion</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logiciel de comptabilité</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logiciel de paie</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logiciel de présence</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logiciel de facturation</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logiciel de marketing</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="services">
-                            <h2 class="services__title">
-                                <a href="#">
-                                    <span>
-                                       Nos services 
-                                    </span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
-                                </a>
-                            </h2>
-                            <ul class="services__content">
-                                <li>
-                                    <a href="#">création de site web</a>
-                                </li>
-                                <li>
-                                    <a href="#">Création de logiciel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Maintenance de site site web et application web</a>
-                                </li>
-                                <li>
-                                    <a href="#">Un guide à une bonne gestion de votre site web</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="apropos">
-                            <h2 class="apropos__title">
-                                <a href="#">
-                                    <span>
-                                       À Propos 
-                                    </span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z"/></svg>
-                                </a>
-                            </h2>
-                            <ul class="apropos__content">
-                                <li>
-                                    <a href="#">Contact</a>
-                                </li>
-                                <li>
-                                    <a href="#">Portfolio</a>
-                                </li>
-                            </ul>
-                        </li>
+                <div>
+                    <ul class="header__nav__links">
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
-                    <div class="btn">
-                        <div class="btn__search">
-                            <input type="search">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+                    <div class="header__nav__btns">
+                        <div class="btn__theme">
+                            <div class="btn__theme-light">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z"/></svg>
+                            </div>
+                            <div class="btn__theme-dark">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M380-160q133 0 226.5-93.5T700-480q0-133-93.5-226.5T380-800h-21q-10 0-19 2 57 66 88.5 147.5T460-480q0 89-31.5 170.5T340-162q9 2 19 2h21Zm0 80q-53 0-103.5-13.5T180-134q93-54 146.5-146T380-480q0-108-53.5-200T180-826q46-27 96.5-40.5T380-880q83 0 156 31.5T663-763q54 54 85.5 127T780-480q0 83-31.5 156T663-197q-54 54-127 85.5T380-80Zm80-400Z"/></svg>
+                            </div>
                         </div>
-                        <div class="btn__menu">
-                            <div class="btn__menu__open">
+                        <div class="btn-menu">
+                            <div class="btn__menu-open">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                             </div>
-                            <div class="btn__menu__close">
+                            <div class="btn__menu-close">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
                             </div>
                         </div>
                     </div>
                 </div>
             </nav>
-            <div class="header__title">
-                <div class="header__title__head">
-                    <h1>
-                        Votre présence en ligne <span>notre expertise.</span>
-                    </h1>
-                    <p>
-                        Nous aidons les entreprises à se développer grâce à des solutions web personnalisées et adaptées à leurs besoins.
-                    </p>
-                    <div class="btn">
-                        <a href="#">Commender votre site</a>
-                        <a href="#">Voir les logiciels</a>
+            <div class="header__content">
+                <div class="header__content__title">
+                    <h1>AARON BUKASA</h1>
+                    <h4>Développeur web et mobile &amp; Gestionnaire financier</h4>
+                    <p>Développeur web et mobile  experimenté avec une passion pour les codes.
+                    Licencié en sciences économiques et de gestion, je dispose également d'une expérience professionnelle réussie dans le commerce.</p>
+                    <p>Aujourd'hui je prends plaisir à coder, à passer des longues heures entrain de coder, à apprendre des nouvelles connaissances en développement web, donner vie à mes idées, coder me rend vivant.</p>
+                    <div class="title__btns">
+                        <a href="#" class="btn-downloadCV">Télécharger CV PDF</a>
+                        <a href="#" class="btn-voirCV">Voir le CV</a>
                     </div>
                 </div>
-                <div class="header__title__bannere">
-                    <img src="#" alt="image_01">
-                    <img src="#" alt="image_02">
-                    <img src="#" alt="image_03">
-                    <img src="#" alt="image_04">
-                    <img src="#" alt="image_05">
-                </div>
+                <picture class="header__content__img">
+                    <source srcset="./img/profil_full.png" media="(min-width: 768px)">
+                    <img src="./img/profil_small.png" alt="photo Aaron Bukasa">
+                </picture>
             </div>
         </header>
-        <main class="main"></main>
-        <footer class="footer">
-            <ul class="footer__contact">
-                <li>
-                    <h2>Contactez-nous</h2>
-                    <div class="tel">
-                        <p>Tel : +243816213580<br />   +243816213580</p>
-                    </div>
-                    <div class="email">
-                        <p>
-                            <a href="#">ardev-digital@gmail.com</a>
-                            <a href="#">aaronbukasa.mba@gmail.com</a>
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <h2>
-                        Suivez-nous
-                    </h2>
-                    <a href="#">Facebook</a>
-                    <a href="#">Instagramme</a>
-                    <a href="#">Twitter</a>
-                </li>
-            </ul>
-            <div class="footer__portfolio">
-                <h2>
-                    <a href="#">Portfolio</a>
-                </h2>
-                
-            </div>
-            <div class="footer__copyright">
-                copyright @ardev 2023
-            </div>
-        </footer>
     </div>
 </body>
 </html>
