--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>Aujourd'hui je prends plaisir à coder, à passer des longues heures entrain de coder, à apprendre des nouvelles connaissances en développement web, donner vie à mes idées, coder me rend vivant.</p>
                     <div class="title__btns">
                         <a href="#" class="btn-downloadCV">Télécharger CV PDF</a>
-                        <a href="#" class="btn-voirCV">Voir le CV</a>
+                        <a href="https://aaron-bukasa.github.io/Aaron_bukasa-Curriculum_vitae/" target="_blank" class="btn-voirCV">Voir le CV</a>
                     </div>
                 </div>
                 <picture class="header__content__img">
@@ -61,12 +61,68 @@
             </div>
         </header>
         <main class="main">
-
+            <section class="services">
+                <h2 class="services__title">SERVICES</h2>
+                <div class="services__content">
+                    <div class="gestion__fin">
+                        <a href="#">
+                            <h3>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M320-414v-306h120v306l-60-56-60 56Zm200 60v-526h120v406L520-354ZM120-216v-344h120v224L120-216Zm0 98 258-258 142 122 224-224h-64v-80h200v200h-80v-64L524-146 382-268 232-118H120Z"/></svg>
+                                Gestion financière
+                            </h3>
+                            <p>Je suis un gestionnaire financier expérimenté avec une passion pour aider les entreprises à atteindre leurs objectifs financiers. Je maîtrise les dernières techniques et tendances en matière de gestion financière, et je suis toujours à la recherche de nouvelles façons d'améliorer mes services...</p>
+                            <a href="#" class="more">Voir plus</a>
+                        </a>
+                    </div>
+                    <div class="dev__web">
+                        <a href="#">
+                            <h3>
+                                <svg height="800px" width="800px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                viewBox="0 0 512 512" xml:space="preserve">
+                                <circle cx="256" cy="256" r="256"/>
+                                <g>
+                                <path style="fill:#FFFFFF;" d="M213.12,319.776L99.872,270.544V243.28l113.248-49.008v32.112l-79.008,30.208l79.008,31.328V319.776
+                                z"/>
+                                <path style="fill:#FFFFFF;" d="M223.6,341.408l40.912-170.832h23.776l-41.36,170.832H223.6z"/>
+                                <path style="fill:#FFFFFF;" d="M298.768,319.904V288l79.104-31.104l-79.104-30.752V194.48l113.36,49.008v27.04L298.768,319.904z"/>
+                                </g>
+                                </svg>
+                                développement web
+                            </h3>
+                            <p>Développeur Web expérimenté avec une expertise en conception, développement et maintenance de sites Web et d'applications Web. Maîtrise des technologies HTML, CSS, JavaScript, PHP, MySQL et React.Je suis spécialisé dans la création de sites Web et d'applications Web de haute qualité qui sont à la fois attrayants...</p>
+                            <a href="#" class="more">Voir plus</a>
+                        </a>
+                    </div>
+                    <div class="dev__logiciel">
+                        <a href="#">
+                            <h3>
+                                <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" 
+                                width="800px" height="800px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+                                <path d="M78,67.5H44.4c-1,0-1.9,0.9-1.9,1.9v3.7c0,1,0.9,1.9,1.9,1.9H78c1,0,1.9-0.9,1.9-1.9v-3.7
+                                C79.9,68.3,79,67.5,78,67.5z"/>
+                                <path d="M49.2,44.8L25.1,25.4c-0.7-0.6-1.9-0.5-2.5,0.4l-2.1,3c-0.6,0.9-0.4,2,0.4,2.6L38,45.1c0.6,0.5,0.6,1.5,0,2
+                                L20.8,60.9c-0.7,0.6-1,1.9-0.4,2.6l2.1,3.2c0.6,0.9,1.7,1,2.5,0.4l24.2-19.3C50.2,47,50.2,45.5,49.2,44.8z"/>
+                                </svg>
+                                développement logiciel
+                            </h3>
+                            <p>Je suis un développeur logiciel expérimenté avec une passion pour créer des applications logicielles innovantes et efficaces. Je maîtrise les dernières technologies et tendances du développement logiciel, et je suis toujours à la recherche de nouvelles façons d'améliorer mon travail...</p>
+                            <a href="#" class="more">Voir plus</a>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio">
+                <h2 class="portfolio__title">PORTFOLIO</h2>
+                <div class="portfolio__content">
+                    Encours...
+                </div>
+            </section>
         </main>
         <footer>
+            <h2>CONTACT</h2>
             <div class="contact">
                 <div class="contact__perso">
-                    <h2>AARON BUKASA</h2>
+                    <h3>AARON BUKASA</h3>
                     <a href="tel:+243816213580">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
                             <path d="M760-480q0-117-81.5-198.5T480-760v-80q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480h-80Zm-160 0q0-50-35-85t-85-35v-80q83 0 141.5 58.5T680-480h-80Zm198 360q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z"/>
@@ -103,10 +159,6 @@
                     <div class="name">
                         <label for="name">Nom*</label>
                         <input type="text" id="name" name="name">
-                    </div>
-                    <div class="first-name">
-                        <label for="first-name">Prenom</label>
-                        <input type="text" id="first-name" name="first-name">
                     </div>
                     <div class="email">
                         <label for="email">Mail*</label>
