ajout des contraintes de velidation sur les formulaires

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -44,7 +44,9 @@
             </nav>
             <h1 class="header__title">PORTFOLIO</h1>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            Encours...
+        </main>
         <footer>
             <div class="copyRight">
                 copyRight (c) Aaron bukasa 2023
