--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Aaron Bukasa">
     <title>AARON DEV</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./apps/validation.js" defer></script>
     <script src="./app.js" defer></script>
 </head>
 <body>
@@ -53,11 +54,11 @@
                         <a href="#" class="btn-downloadCV">Télécharger CV PDF</a>
                         <a href="https://aaron-bukasa.github.io/Aaron_bukasa-Curriculum_vitae/" target="_blank" class="btn-voirCV">Voir le CV</a>
                     </div>
+                </div>                
+                <div class="header__content__img">
+                    <img src="./img/profil_ull.png" alt="Aaron bukasa" class="img-full">
+                    <img src="./img/profil_small.png" alt="Aaron Bukasa" class="img-small">
                 </div>
-                <picture class="header__content__img">
-                    <source srcset="./img/profil_full.png" media="(min-width: 768px)">
-                    <img src="./img/profil_small.png" alt="photo Aaron Bukasa">
-                </picture>
             </div>
         </header>
         <main class="main">
@@ -77,16 +78,7 @@
                     <div class="dev__web">
                         <a href="./pages/services.html#dev_web">
                             <h3>
-                                <svg height="800px" width="800px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                                viewBox="0 0 512 512" xml:space="preserve" stroke="#ffffff">
-                                <circle cx="256" cy="256" r="256" />
-                                <g>
-                                <path d="M213.12,319.776L99.872,270.544V243.28l113.248-49.008v32.112l-79.008,30.208l79.008,31.328V319.776
-                                z" fill="#ffffff" />
-                                <path d="M223.6,341.408l40.912-170.832h23.776l-41.36,170.832H223.6z"/>
-                                <path d="M298.768,319.904V288l79.104-31.104l-79.104-30.752V194.48l113.36,49.008v27.04L298.768,319.904z" fill="#ffffff" />
-                                </g>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"/></svg>
                                 développement web
                             </h3>
                             <p>Développeur Web expérimenté avec une expertise en conception, développement et maintenance de sites Web et d'applications Web. Maîtrise des technologies HTML, CSS, JavaScript, PHP, MySQL et React.Je suis spécialisé dans la création de sites Web et d'applications Web de haute qualité qui sont à la fois attrayants...</p>
@@ -118,7 +110,7 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <footer class="footer-principal">
             <div class="contact">
                 <h2>CONTACT</h2>
                 <div>
@@ -131,9 +123,7 @@
                             +243 816 21 35 80
                         </a>
                         <a href="mailto:aaronbukasa.mba@gmail.com">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
-                                <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/>
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg>
                             aaronbukasa.mba@gmail.com
                         </a>
                         <p>
@@ -156,18 +146,18 @@
                             </a>
                         </div>
                     </div>
-                    <form action="" method="post" class="contact__form">
-                        <div class="name">
-                            <label for="name">Nom*</label>
-                            <input type="text" id="name" name="name">
+                    <form method="post" class="contact__form">
+                        <div class="username">
+                            <label for="username">Nom*</label>
+                            <input type="text" id="username" name="nom">
                         </div>
-                        <div class="email">
-                            <label for="email">Mail*</label>
-                            <input type="email" id="email" name="email">
+                        <div class="useremail">
+                            <label for="useremail">Mail*</label>
+                            <input type="email" id="useremail" name="email">
                         </div>
-                        <div class="message">
-                            <label for="message">Message</label>
-                            <textarea name="" id="message" cols="30" rows="10"></textarea>
+                        <div class="usermessage">
+                            <label for="usermessage">Message</label>
+                            <textarea name="usermessage" id="usermessage" cols="30" rows="10"></textarea>
          
                         </div>
                         <div class="validation-right">
