--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <title>CONTACT</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./styles/contact.css">
+    <script src="../apps/validation.js" defer></script>
     <script src="../app.js" defer></script>
 </head>
 <body>
@@ -54,9 +55,7 @@
                     +243 816 21 35 80
                 </a>
                 <a href="mailto:aaronbukasa.mba@gmail.com">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
-                        <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg>
                     aaronbukasa.mba@gmail.com
                 </a>
                 <p>
@@ -82,19 +81,19 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31261.85220985977!2d27.49179131400638!3d-11.642470399999988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2scd!4v1703235557374!5m2!1sfr!2scd" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-            <form action="" method="post" class="contact__form">
-                <div class="name">
-                    <label for="name">Nom*</label>
-                    <input type="text" id="name" name="name">
+            <form method="post" class="contact__form">
+                <div class="username">
+                    <label for="username">Nom*</label>
+                    <input type="text" id="username" name="nom">
                 </div>
-                <div class="email">
-                    <label for="email">Mail*</label>
-                    <input type="email" id="email" name="email">
+                <div class="useremail">
+                    <label for="useremail">Mail*</label>
+                    <input type="email" id="useremail" name="mail">
                 </div>
-                <div class="message">
-                    <label for="message">Message</label>
-                    <textarea name="" id="message" cols="30" rows="10"></textarea>
-    
+                <div class="usermessage">
+                    <label for="usermessage">Message</label>
+                    <textarea name="usermessage" id="usermessage" cols="30" rows="10"></textarea>
+ 
                 </div>
                 <div class="validation-right">
                     <input type="checkbox" id="validation-right" name="validation-right">
