ajout des quelques projets dans le fichier index.html avec l'API fetch

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -106,8 +106,8 @@
             <section class="portfolio">
                 <h2 class="portfolio__title">PORTFOLIO</h2>
                 <div class="portfolio__content">
-                    Encours...
                 </div>
+                <a href="./pages/portfolio.html" class="more">voir plus</a>
             </section>
         </main>
         <footer class="footer-principal">
