--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -45,7 +45,8 @@
             <h1 class="header__title">PORTFOLIO</h1>
         </header>
         <main class="main">
-            Encours...
+            <div class="portfolio__content-pg">
+            </div>
         </main>
         <footer>
             <div class="copyRight">
