ajout du style aux différents projets et services

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </header>
         <main class="main">
             <section class="services">
-                <h2 class="services__title">SERVICES</h2>
+                <h2 class="services__title">MES SERVICES</h2>
                 <div class="services__content">
                     <div class="gestion__fin">
                         <a href="./pages/services.html#gestion__fin">
@@ -104,7 +104,7 @@
                 </div>
             </section>
             <section class="portfolio">
-                <h2 class="portfolio__title">PORTFOLIO</h2>
+                <h2 class="portfolio__title">MES PORTFOLIO</h2>
                 <div class="portfolio__content">
                 </div>
                 <a href="./pages/portfolio.html" class="more">voir plus</a>
@@ -112,7 +112,7 @@
         </main>
         <footer class="footer-principal">
             <div class="contact">
-                <h2>CONTACT</h2>
+                <h2>ME CONTACTER</h2>
                 <div>
                     <div class="contact__perso">
                         <h3>AARON BUKASA</h3>
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="copyRight">
-                copyRight (c) Aaron bukasa 2023
+                Copyright 2023 Aaron bukasa
             </div>
         </footer>
     </div>
