--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </nav>
-            <h1 class="header__title">CONTACT</h1>
+            <h1 class="header__title">ME CONTACTER</h1>
         </header>
         <main class="main">
             <div class="contact__perso">
@@ -105,7 +105,7 @@
         </main>
         <footer>
             <div class="copyRight">
-                copyRight (c) Aaron bukasa 2023
+                Copyright 2023 Aaron bukasa
             </div>
         </footer>
     </div>
