--- a/pages/services.html
+++ b/pages/services.html
@@ -43,8 +43,10 @@
                 </div>
             </nav>
             <div class="header__bannere">
-                <img src="../img/lee-campbell.jpg" alt="bannere">
-                <h1>SERVICES</h1>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#484873" fill-opacity="1" d="M0,160L60,154.7C120,149,240,139,360,149.3C480,160,600,192,720,202.7C840,213,960,203,1080,213.3C1200,224,1320,256,1380,272L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+                </svg>
+                <h1>MES SERVICES</h1>
             </div>
         </header>
         <main class="main">
@@ -131,7 +133,7 @@
         </main>
         <footer>
             <div class="copyRight">
-                copyRight (c) Aaron bukasa 2023
+                Copyright 2023 Aaron bukasa
             </div>
         </footer>
     </div>
